{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 137,
  "lineage": "e1dd193e-6b3c-514c-267a-cc51c983e7ea",
  "resources": [
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:471112932176:loadbalancer/app/babu-app-alb/7ad227a7ac6309ca",
            "arn_suffix": "app/babu-app-alb/7ad227a7ac6309ca",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-babu-app-alb-1839108820.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:471112932176:loadbalancer/app/babu-app-alb/7ad227a7ac6309ca",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "babu-app-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05d6e3be035023bef"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01cd0a44a5a60e79e"
              },
              {
                "subnet_id": "subnet-0a0ed4f760f6a922b"
              }
            ],
            "subnets": [
              "subnet-01cd0a44a5a60e79e",
              "subnet-0a0ed4f760f6a922b"
            ],
            "vpc_id": "vpc-015edca236a5366c7",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.security.aws_security_group.app",
            "module.security.aws_security_group.web",
            "module.vpc.aws_subnet.app",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:471112932176:loadbalancer/app/babu-web-alb/e3d0ba171dc02430",
            "arn_suffix": "app/babu-web-alb/e3d0ba171dc02430",
            "desync_mitigation_mode": "defensive",
            "dns_name": "babu-web-alb-1481082632.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:471112932176:loadbalancer/app/babu-web-alb/e3d0ba171dc02430",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "babu-web-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d03008b4d4a96c8c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-078942353c7f67238"
              },
              {
                "subnet_id": "subnet-09a6a6c571c95708f"
              }
            ],
            "subnets": [
              "subnet-078942353c7f67238",
              "subnet-09a6a6c571c95708f"
            ],
            "vpc_id": "vpc-015edca236a5366c7",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.security.aws_security_group.web",
            "module.vpc.aws_subnet.web",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:471112932176:listener/app/babu-app-alb/7ad227a7ac6309ca/e4e4a5379933c628",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:471112932176:targetgroup/babu-app-tg/f9e7e7c64072a418",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:471112932176:listener/app/babu-app-alb/7ad227a7ac6309ca/e4e4a5379933c628",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:471112932176:loadbalancer/app/babu-app-alb/7ad227a7ac6309ca",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.aws_lb.app",
            "module.loadbalancer.aws_lb_target_group.app_tg",
            "module.security.aws_security_group.app",
            "module.security.aws_security_group.web",
            "module.vpc.aws_subnet.app",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:471112932176:listener/app/babu-web-alb/e3d0ba171dc02430/8b69e73d3d5ae62e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:471112932176:targetgroup/babu-web-tg/18399807208bb522",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:471112932176:listener/app/babu-web-alb/e3d0ba171dc02430/8b69e73d3d5ae62e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:471112932176:loadbalancer/app/babu-web-alb/e3d0ba171dc02430",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.aws_lb.web",
            "module.loadbalancer.aws_lb_target_group.web_tg",
            "module.security.aws_security_group.web",
            "module.vpc.aws_subnet.web",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:471112932176:targetgroup/babu-app-tg/f9e7e7c64072a418",
            "arn_suffix": "targetgroup/babu-app-tg/f9e7e7c64072a418",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:471112932176:targetgroup/babu-app-tg/f9e7e7c64072a418",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "babu-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-015edca236a5366c7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:471112932176:targetgroup/babu-web-tg/18399807208bb522",
            "arn_suffix": "targetgroup/babu-web-tg/18399807208bb522",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:471112932176:targetgroup/babu-web-tg/18399807208bb522",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "babu-web-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-015edca236a5366c7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112932176:security-group/sg-05d6e3be035023bef",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05d6e3be035023bef",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d03008b4d4a96c8c"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "babu-app_lb_sg",
            "name_prefix": "",
            "owner_id": "471112932176",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-015edca236a5366c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.web",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112932176:security-group/sg-0a6c15efa78eae688",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a6c15efa78eae688",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0eb2eb73105403adf"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "babu-database-sg",
            "name_prefix": "",
            "owner_id": "471112932176",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-015edca236a5366c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.app",
            "module.security.aws_security_group.private_instance",
            "module.security.aws_security_group.public_instance",
            "module.security.aws_security_group.web",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112932176:security-group/sg-0eb2eb73105403adf",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eb2eb73105403adf",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dea32bab43c2c5d6"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05d6e3be035023bef"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "babu-private-instances-sg",
            "name_prefix": "",
            "owner_id": "471112932176",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-015edca236a5366c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.app",
            "module.security.aws_security_group.public_instance",
            "module.security.aws_security_group.web",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112932176:security-group/sg-0dea32bab43c2c5d6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dea32bab43c2c5d6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d03008b4d4a96c8c"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "babu-public-instances-sg",
            "name_prefix": "",
            "owner_id": "471112932176",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-015edca236a5366c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.web",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112932176:security-group/sg-0d03008b4d4a96c8c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d03008b4d4a96c8c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "babu-web_lb_sg",
            "name_prefix": "",
            "owner_id": "471112932176",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-015edca236a5366c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-031df9795f39adf54",
            "association_id": "eipassoc-087feba67ea6a11e1",
            "domain": "vpc",
            "id": "eipalloc-031df9795f39adf54",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-06bbd8c12fd199633",
            "private_dns": "ip-11-0-0-37.ap-south-1.compute.internal",
            "private_ip": "11.0.0.37",
            "public_dns": "ec2-3-7-113-163.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.7.113.163",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b9da835f2dea0838",
            "association_id": "eipassoc-0775b614478d38d52",
            "domain": "vpc",
            "id": "eipalloc-0b9da835f2dea0838",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0299b2adc6a250d46",
            "private_dns": "ip-11-0-1-46.ap-south-1.compute.internal",
            "private_ip": "11.0.1.46",
            "public_dns": "ec2-13-202-148-191.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.202.148.191",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112932176:internet-gateway/igw-0f7cd8beee37925b0",
            "id": "igw-0f7cd8beee37925b0",
            "owner_id": "471112932176",
            "tags": {
              "Name": "babu-igw"
            },
            "tags_all": {
              "Name": "babu-igw"
            },
            "vpc_id": "vpc-015edca236a5366c7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-031df9795f39adf54",
            "association_id": "eipassoc-087feba67ea6a11e1",
            "connectivity_type": "public",
            "id": "nat-063e671f03557b13b",
            "network_interface_id": "eni-06bbd8c12fd199633",
            "private_ip": "11.0.0.37",
            "public_ip": "3.7.113.163",
            "subnet_id": "subnet-078942353c7f67238",
            "tags": {
              "Name": "babu-nat-1"
            },
            "tags_all": {
              "Name": "babu-nat-1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.web",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b9da835f2dea0838",
            "association_id": "eipassoc-0775b614478d38d52",
            "connectivity_type": "public",
            "id": "nat-0e8db2810026b02d5",
            "network_interface_id": "eni-0299b2adc6a250d46",
            "private_ip": "11.0.1.46",
            "public_ip": "13.202.148.191",
            "subnet_id": "subnet-09a6a6c571c95708f",
            "tags": {
              "Name": "babu-nat-2"
            },
            "tags_all": {
              "Name": "babu-nat-2"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.web",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112932176:route-table/rtb-0398f1ebadb6c7103",
            "id": "rtb-0398f1ebadb6c7103",
            "owner_id": "471112932176",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f7cd8beee37925b0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "babu-Custom_rt"
            },
            "tags_all": {
              "Name": "babu-Custom_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-015edca236a5366c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112932176:route-table/rtb-0dc78e1c5e25ff23c",
            "id": "rtb-0dc78e1c5e25ff23c",
            "owner_id": "471112932176",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-063e671f03557b13b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "babu-main_rt"
            },
            "tags_all": {
              "Name": "babu-main_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-015edca236a5366c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.web",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f7af1788b6f38c4",
            "route_table_id": "rtb-0dc78e1c5e25ff23c",
            "subnet_id": "subnet-0a0ed4f760f6a922b"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.main",
            "module.vpc.aws_subnet.app",
            "module.vpc.aws_subnet.web",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05020a15cf50ad138",
            "route_table_id": "rtb-0dc78e1c5e25ff23c",
            "subnet_id": "subnet-01cd0a44a5a60e79e"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.main",
            "module.vpc.aws_subnet.app",
            "module.vpc.aws_subnet.web",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3d21556e7b5de97",
            "route_table_id": "rtb-0398f1ebadb6c7103",
            "subnet_id": "subnet-078942353c7f67238"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.custom",
            "module.vpc.aws_subnet.web",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d6a7742d71a79d5",
            "route_table_id": "rtb-0398f1ebadb6c7103",
            "subnet_id": "subnet-09a6a6c571c95708f"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.custom",
            "module.vpc.aws_subnet.web",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112932176:subnet/subnet-0a0ed4f760f6a922b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "11.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0ed4f760f6a922b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112932176",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "babu-private-1"
            },
            "tags_all": {
              "Name": "babu-private-1"
            },
            "vpc_id": "vpc-015edca236a5366c7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112932176:subnet/subnet-01cd0a44a5a60e79e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "11.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01cd0a44a5a60e79e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112932176",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "babu-private-2"
            },
            "tags_all": {
              "Name": "babu-private-2"
            },
            "vpc_id": "vpc-015edca236a5366c7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112932176:subnet/subnet-08686f24427f8d4cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "11.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08686f24427f8d4cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112932176",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "babu-db-1"
            },
            "tags_all": {
              "Name": "babu-db-1"
            },
            "vpc_id": "vpc-015edca236a5366c7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112932176:subnet/subnet-04b6047bcc0b9f0b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "11.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b6047bcc0b9f0b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112932176",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "babu-db-2"
            },
            "tags_all": {
              "Name": "babu-db-2"
            },
            "vpc_id": "vpc-015edca236a5366c7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112932176:subnet/subnet-078942353c7f67238",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "11.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078942353c7f67238",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112932176",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "babu-public-1"
            },
            "tags_all": {
              "Name": "babu-public-1"
            },
            "vpc_id": "vpc-015edca236a5366c7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112932176:subnet/subnet-09a6a6c571c95708f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "11.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a6a6c571c95708f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112932176",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "babu-public-2"
            },
            "tags_all": {
              "Name": "babu-public-2"
            },
            "vpc_id": "vpc-015edca236a5366c7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112932176:vpc/vpc-015edca236a5366c7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-0c934cfeac6e1bff8",
            "default_route_table_id": "rtb-03538872256787656",
            "default_security_group_id": "sg-038c6c08700b59788",
            "dhcp_options_id": "dopt-003721dbdea12b4ef",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-015edca236a5366c7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03538872256787656",
            "owner_id": "471112932176",
            "tags": {
              "Name": "babu-vpc"
            },
            "tags_all": {
              "Name": "babu-vpc"
            }
          }
        }
      ]
    }
  ]
}